# roxlap-game-demo

./: CLAUDE.md  Cargo.toml  README.md  shell.nix
proptest-regressions/systems/: autopilot.txt
src/: fonts.rs  input.rs  main.rs  math.rs  world.rs
src/components/: asteroid.rs  camera.rs  mod.rs  newton_body.rs  thruster.rs
src/generation/: chunks.rs
src/systems/: autopilot.rs  camera.rs  chunk_population.rs  miner_input.rs  mod.rs  newton_body.rs  performance_info.rs  render.rs  thruster.rs
