[package]
name = "roxlap-game-demo"
version = "0.1.0"
authors = ["Aminion <aminion@protonmail.com>"] 
edition = "2021"

[dependencies]
roxlap-core = "0.1.1"
glam = "0.30.10"
crossbeam = "0.8.4"
rand = "0.9.4"
log = "0.4.29"
env_logger = "0.11.10"

[dependencies.sdl2]
version = "0.38"
default-features = false
features = ["mixer", "gfx", "ttf"]

[dependencies.legion]
version = "0.4.0"
default-features = false
features = ["codegen"]
